# hiperia

./: .gitignore  Anchor.toml  index.html  package-lock.json  package.json  vercel-submodule-workaround.sh  vercel.json  vite.config copy.js  vite.config.js
hiperia/: package.json
hiperia_program/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
hiperia_program/programs/hiperia_program/: Cargo.toml
hiperia_program/programs/hiperia_program/src/: constants.rs  lib copy.rs  lib.rs  rng copy.rs  rng.rs  utils.rs
hiperia_program/scripts/: initialize.js
hiperia_program/tests/: hiperia.ts  hiperia_program.js
programs/hiperia/: Cargo.toml
programs/hiperia/src/: lib.rs
public/: android-chrome-512x512.png:Zone.Identifier
src/: App copy.jsx  App.css  App.jsx  index.css  main.jsx
src/components/: DonationContainer copy.jsx  DonationContainer.jsx  Footer copy.jsx  Footer.jsx  GameCarousel copy.jsx  GameCarousel.jsx  Header.jsx  MatrixBackground.jsx  ParticleCanvas.jsx  Ticker.jsx  WalletBalance copy.jsx  WalletBalance.jsx
src/games/: Dodos.jsx
src/games/alice/: AliceInWonderland.jsx  alice-in-wonderland.css
src/games/dodos/: Dodos copy 2.jsx  Dodos copy.jsx  Dodos.jsx  dodos copy.css  dodos.css
src/games/dos/: Dodos.jsx  dodos.css
src/games/fruit-game/: FruitGame.jsx  fruit-game.css
src/games/pre-game/: Runner.jsx  runner.css
src/idl/: donation_program.json  hiperia_program.json
src/lib/onchain/: dodos.js  idl.js  pdas.js  time.js
src/styles/: donation-container.css  footer.css  game-carousel.css  global.css  header.css  matrix-background.css  particle-canvas.css
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-4000-AVqARKkAVcvZ7c6bkwtDTnjgTGVMNZKsKsuuoriYn83u.tar.zst  snapshot-4100-HkF1HYCvZM8B4vxTHA3RXpj5ghua7RNgviea7CK8a9LT.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1758378631319881  MANIFEST-000021
tests/: hiperia.ts
(+7 files in other folders)
