[workspace]
resolver = "2"
members = [
  "programs/hiperia_program",
]

[workspace.dependencies]
solana-program = "1.18.26"
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
solana-program-option = "1.18.26"
solana-zk-token-sdk = "1.18.26"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
