[package]
name = "hiperia_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hiperia_program"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[profile.release]
overflow-checks = true