[package]
name = "hiperia_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hiperia_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["anchor-lang/derive"]
default = []
custom-heap = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = { workspace = true }
sha3 = "0.10"
