[package]
name = "hiperia_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hiperia_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["anchor-lang/derive"]
default = []
custom-heap = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"  # Aligned with anchor-cli 0.31.1

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1